$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-07-14 [B] Only display custom user profile fields if corresponding config option is populated {GauGau}
2009-07-13 [D] Updated testing instructions as a preparation for the first release to the testers {GauGau}
2009-07-10 [A] Added config option to determine resize dimension for intermediate pictures {eenemeenemuu}
2009-07-10 [C] Added confirmation message after editing a file (thread 60096) {eenemeenemuu}
2009-07-08 [O] Added additional information for register globals (thread ID60486) {GauGau}
2009-06-23 [O] Organized & optimized update.php and added output rows for file updates {Paver}
2009-06-23 [B] Corrected label on update.php for deleting files by fixing delete function return value {Paver}
2009-06-18 [D] Added missing documentation about thumb sharpening {GauGau}
2009-06-14 [A] Handle missing images better by displaying a placeholder image and logging the missing file {Nibbler}
2009-06-13 [M] Remove image_processor.php {Nibbler}
2009-06-12 [B] Fixed checkAll function calling who doesn't work in reviewcom.php  {Frantz}
2009-06-11 [C] Added help icons and alternative layout to category manager {GauGau}
2009-06-10 [A] Added parameter to starttable function to allow easy adding of alternating row colors in the future {GauGau} 
2009-06-09 [C] Replaced hard-coded lang strings with lang variables ind delete.php {Frantz}
2009-06-09 [A] Added support for HTML5 <video> and <audio> tags {Nibbler}
2009-06-09 [O] Changed keyword-insertion from list from pop-up to greybox {GauGau}
2009-06-09 [O] Beautified upload screens by moving noise into help display {GauGau}